--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "element-ui": "^2.2.1",
     "mint-ui": "^2.2.13",
+    "v-tap": "^3.0.3",
     "vconsole": "^3.2.0",
     "vue": "^2.5.2",
     "vue-awesome": "^2.3.5",
     "vue-router": "^3.0.1",
+    "vue2-touch-events": "^1.0.0",
     "vuex": "^3.0.1",
     "vux": "^2.8.0"
   },
