--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "builddev": "node build/builddev.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "element-ui": "^2.2.1",
     "mint-ui": "^2.2.13",
     "v-tap": "^3.0.3",
